[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Skelett.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/grass.png" type="Texture" id=3]
[ext_resource path="res://Pics/Mapbuilding/Stad/gata.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Stad/Bussskylt.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_background_himmel1.png" type="Texture" id=6]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_bak.png" type="Texture" id=7]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_background_berg.png" type="Texture" id=8]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_mitt.png" type="Texture" id=9]
[ext_resource path="res://Pics/Mapbuilding/Stad/tilemaps/street_tilemap.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Worldbuilding/Tree2.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/dogicapixel.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Scripts/Stad/Stad.gd" type="Script" id=14]

[sub_resource type="TileSet" id=3]
0/name = "street_tilemap.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "street_tilemap.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=1]
0/name = "gräs.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "street_tilemap.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "street_tilemap.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "street_tilemap.png 3"
3/texture = ExtResource( 11 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 96, 128, 160 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 2 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "street_tilemap.png 4"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 384, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "street_tilemap.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 384, 128, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "street_tilemap.png 6"
6/texture = ExtResource( 11 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 512, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 263.5, 327.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 267, 455 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 217, 472 )

[sub_resource type="DynamicFont" id=9]
size = 110
outline_size = 2
outline_color = Color( 0.364706, 0.0666667, 0.482353, 1 )
extra_spacing_top = 70
font_data = ExtResource( 13 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 241, 381 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 82, 5.25 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 37, 119.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 176.5, 448 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 61, 129 )

[node name="Stad" type="Node2D"]
script = ExtResource( 14 )

[node name="Tree2" parent="." instance=ExtResource( 12 )]
modulate = Color( 0.752941, 0.831373, 0.905882, 1 )
position = Vector2( -378, -162 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree4" parent="." instance=ExtResource( 12 )]
modulate = Color( 0.752941, 0.831373, 0.905882, 1 )
position = Vector2( 1678, -180 )
scale = Vector2( 0.9, 0.9 )

[node name="Tree3" parent="." instance=ExtResource( 12 )]
position = Vector2( -1927, -213 )
scale = Vector2( -1, 1 )

[node name="road" type="TileMap" parent="."]
position = Vector2( 2, 25 )
tile_set = SubResource( 3 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 1, 0, 131109, 1, 0, 131110, 1, 0, 131111, 1, 0, 131112, 1, 0, 131113, 1, 0, 131114, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 196640, 1, 0, 196641, 1, 0, 196642, 1, 0, 196643, 1, 0, 196644, 1, 0, 196645, 1, 0, 196646, 1, 0, 196647, 1, 0, 196648, 1, 0, 196649, 1, 0, 196650, 1, 0, 327662, 0, 0, 327663, 0, 0, 327664, 0, 0, 327665, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 262178, 1, 0, 262179, 1, 0, 262180, 1, 0, 262181, 1, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 393198, 1, 0, 393199, 1, 0, 393200, 1, 0, 393201, 1, 0, 393202, 1, 0, 393203, 1, 0, 393204, 1, 0, 393205, 1, 0, 393206, 1, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327712, 1, 0, 327713, 1, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 327718, 1, 0, 327719, 1, 0, 327720, 1, 0, 327721, 1, 0, 327722, 1, 0, 458734, 1, 0, 458735, 1, 0, 458736, 1, 0, 458737, 1, 0, 458738, 1, 0, 458739, 1, 0, 458740, 1, 0, 458741, 1, 0, 458742, 1, 0, 458743, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 524270, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 524275, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0 )

[node name="sidewalk" type="TileMap" parent="."]
modulate = Color( 0.560784, 0.803922, 0.576471, 1 )
position = Vector2( 171, -10 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -19, 3, 0, -18, 3, 0, -11, 3, 0, -10, 3, 0, -5, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 1, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0, -65508, 3, 0, 65517, 2, 0, 65518, 2, 0, 65519, 2, 0, 65520, 2, 0, 65521, 2, 0, 65522, 2, 0, 65523, 2, 0, 65524, 2, 0, 65525, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 131053, 2, 0, 131054, 2, 0, 131055, 2, 0, 131056, 2, 0, 131057, 2, 0, 131058, 2, 0, 131059, 2, 0, 131060, 2, 0, 131061, 2, 0, 131062, 2, 0, 131063, 2, 0, 131064, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 6, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65573, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 196589, 2, 0, 196590, 2, 0, 196591, 2, 0, 196592, 2, 0, 196593, 2, 0, 196594, 2, 0, 196595, 2, 0, 196596, 2, 0, 196597, 2, 0, 196598, 2, 0, 196599, 2, 0, 196600, 2, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 4, 0, 262125, 2, 0, 262126, 2, 0, 262127, 2, 0, 262128, 2, 0, 262129, 2, 0, 262130, 2, 0, 262131, 2, 0, 262132, 2, 0, 262133, 2, 0, 262134, 2, 0, 262135, 2, 0, 262136, 2, 0, 262137, 2, 0, 262138, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 4, 0, 327661, 1, 0, 327662, 1, 0, 327663, 1, 0, 327664, 1, 0, 327665, 1, 0, 327666, 1, 0, 327667, 1, 0, 327668, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 5, 0 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -1737.0
margin_top = -849.0
margin_right = -1275.0
margin_bottom = 228.0
color = Color( 0.760784, 0.486275, 0.223529, 1 )

[node name="ColorRect6" type="ColorRect" parent="Control"]
margin_left = -2041.0
margin_top = -87.0
margin_right = -1790.0
margin_bottom = 255.0
color = Color( 0.760784, 0.486275, 0.223529, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control"]
margin_left = 1148.0
margin_top = -805.0
margin_right = 1518.0
margin_bottom = 272.0
color = Color( 0.870588, 0.635294, 0.184314, 1 )

[node name="ColorRect3" type="ColorRect" parent="Control"]
margin_left = -953.0
margin_top = -813.0
margin_right = -526.0
margin_bottom = 264.0
color = Color( 0.870588, 0.635294, 0.184314, 1 )

[node name="ColorRect4" type="ColorRect" parent="Control"]
margin_left = -295.0
margin_top = -555.0
margin_right = 128.0
margin_bottom = 256.0
color = Color( 0.870588, 0.635294, 0.184314, 1 )

[node name="ColorRect5" type="ColorRect" parent="Control"]
margin_left = 428.0
margin_top = -553.0
margin_right = 851.0
margin_bottom = 258.0
color = Color( 0.870588, 0.635294, 0.184314, 1 )

[node name="ColorRect7" type="ColorRect" parent="Control"]
margin_left = 1901.0
margin_top = -741.0
margin_right = 2280.0
margin_bottom = 228.0
color = Color( 0.870588, 0.635294, 0.184314, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Skelett" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 1510, 586 )
scale = Vector2( 0.5, 0.5 )

[node name="Hus" type="StaticBody2D" parent="YSort"]
position = Vector2( 23, 99 )
collision_layer = 2

[node name="Hus" type="Sprite" parent="YSort/Hus"]
position = Vector2( 116, -450 )
texture = ExtResource( 4 )

[node name="col_lumber" type="CollisionPolygon2D" parent="YSort/Hus"]
visible = false
position = Vector2( 1, 7 )
polygon = PoolVector2Array( 344, 166, 888, 166, 888, 158, 864, 158, 864, -514, 368, -514, 368, 158, 344, 158 )

[node name="col_grön" type="CollisionShape2D" parent="YSort/Hus"]
visible = false
position = Vector2( -92.5, -152.5 )
shape = SubResource( 5 )

[node name="col_blå" type="CollisionShape2D" parent="YSort/Hus"]
visible = false
position = Vector2( -751, -279 )
shape = SubResource( 6 )

[node name="col_gym" type="CollisionShape2D" parent="YSort/Hus"]
visible = false
position = Vector2( 1317, -297 )
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="YSort/Hus"]
margin_left = 1580.0
margin_top = -585.0
margin_right = 1694.0
margin_bottom = 55.0
custom_colors/default_color = Color( 0.435059, 0.225586, 0.515625, 1 )
custom_fonts/bold_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "	
[b]GYM[/b]"
text = "	
GYM"

[node name="col_balkong" type="CollisionPolygon2D" parent="YSort/Hus"]
visible = false
polygon = PoolVector2Array( -1094, -612, -1086, -612, -1086, -480, -1229, -480, -1229, -484, -1094, -484 )

[node name="col_orangerosa" type="CollisionShape2D" parent="YSort/Hus"]
visible = false
position = Vector2( 2060, -206 )
shape = SubResource( 13 )

[node name="col_skylt" type="CollisionShape2D" parent="YSort/Hus"]
visible = false
position = Vector2( 1616, 166 )
shape = SubResource( 14 )

[node name="Bussskylt" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 2840, 99 )

[node name="Bakgrund" type="ParallaxBackground" parent="."]

[node name="Himmel" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -67, -212 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel1" type="Sprite" parent="Bakgrund/Himmel"]
position = Vector2( 2, 12 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 3570, 2000 )

[node name="berg_bak" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -354, -182 )
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel3" type="Sprite" parent="Bakgrund/berg_bak"]
position = Vector2( 100, -65 )
texture = ExtResource( 7 )

[node name="Berg_mitt" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( 551, -168 )
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel2" type="Sprite" parent="Bakgrund/Berg_mitt"]
position = Vector2( -130, -58 )
texture = ExtResource( 9 )

[node name="Berg_fram" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -882, -188 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="berg" type="Sprite" parent="Bakgrund/Berg_fram"]
texture = ExtResource( 8 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 3080, 9 )
current = true
limit_left = -2250
limit_top = -1200
limit_right = 4000
limit_bottom = 1000
editor_draw_limits = true

[node name="gate_Gym" type="Area2D" parent="."]
position = Vector2( 1435, 160 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Gym"]
position = Vector2( 2, -5.5 )
shape = SubResource( 10 )

[node name="gate_Berg" type="Area2D" parent="."]
position = Vector2( 3833, 134 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Berg"]
position = Vector2( 1.5, 1 )
shape = SubResource( 11 )

[node name="gate_Redhouse" type="Area2D" parent="."]
position = Vector2( -1922, 123 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Redhouse"]
position = Vector2( 5, 3 )
shape = SubResource( 12 )

[node name="Positioner" type="Node2D" parent="."]

[node name="stad_Gym" type="Position2D" parent="Positioner"]
position = Vector2( 1435, 166 )

[node name="stad_Berg" type="Position2D" parent="Positioner"]
position = Vector2( 3573, 166 )

[connection signal="NPC_detected" from="YSort/Skelett" to="." method="_on_Skelett_NPC_detected"]
[connection signal="gate_detected" from="YSort/Skelett" to="." method="_on_Skelett_gate_detected"]
